--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<!-- write your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Profile</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="profile">
+        <img src="Andre-DP.JPG" alt="My Profile Picture">
+        <h1>Andre Hendrawan</h1>
+        <p>Hactiv8 Student</p>
+    </div>
+    <div class="details">
+        <h2 class="sub-title">About Me</h2>
+        <p> 
+            Strong communication, collaboration and build relationships with clients, commitment to excellence on every work, strong build team work as a good team, enthusiastic to learn and undertake new challenges. </p>
+        <h2 class="sub-title">Contact Information</h2>
+        <ul>
+            <li>Email: wongandrehendrawan@gmail.com</li>
+            <li>Instagram: <a href="https://www.instagram.com/andreehendrawan/">andreehendrawan</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/andre-hendrawan-1ab9aa148/">Andre Hendrawan</a></li>
+        </ul>
+    </div>
+</body>
+</html>
